web/css/game.css
#board {
    width: 100%;
    position: relative;
}

#board-spacer {
    display: none;
    height: 316px;
}

.has-docked-board #board {
    position: fixed;
    top: 0;
    left: 0;
}

.has-docked-board #board-spacer {
    display: block;
}

/*

div.move-details {
    float: left;
    width: 320px;
}

#analysis {
    width: 320px;
}

#move-list {
    float: left;
    height: 620px;
    overflow-y: scroll;
}

.moves-table, td {
    border: 1px solid black;
    padding: 3px;
}

.moves-table tr:nth-child(odd){
    background: #CCC;
    width: 100%;
}

.game-info {
    display: inline-block;
}

@media only screen and (max-width: 480px) {
}
*/

